--- a/Carousel/index.html
+++ b/Carousel/index.html
@@ -26,7 +26,28 @@
 
   <!-- Add your site or application content here -->
   <h1>Carousel</h1>
-  
+
+    <ul>
+
+      <li>
+        <figure>
+          <img src="" alt="">
+      </figure>
+
+      </li>
+      <li>
+        <figure>
+          <img src="" alt="">
+      </figure>
+    </li>
+
+      <li>
+        <figure>
+          <img src="" alt="">
+        </figure>
+      </li>
+      
+    </ul>
 
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
