html and css debut

--- a/Carousel/index.html
+++ b/Carousel/index.html
@@ -16,8 +16,8 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="assets/css/normalize.css">
+  <link rel="stylesheet" href="assets/css/main.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -26,28 +26,36 @@
 
   <!-- Add your site or application content here -->
   <h1>Carousel</h1>
+    <section class="carousel">
 
-    <ul>
-
-      <li>
-        <figure>
-          <img src="" alt="">
-      </figure>
-
-      </li>
-      <li>
-        <figure>
-          <img src="" alt="">
-      </figure>
-    </li>
-
-      <li>
-        <figure>
-          <img src="" alt="">
+      <ul>
+  
+        <li>
+          <figure>
+            <img src="img/afficheKroma1.jpg" alt="Concert au Valigloo">
+        </figure>
+  
+        </li>
+        <li>
+          <figure>
+            <img src="img/afficheKroma2.jpg" alt="Concert du 3 juillet">
         </figure>
       </li>
+  
+        <li>
+          <figure>
+            <img src="img/photoConcert.jpg" alt="Concert au Fut et à Mesure">
+          </figure>
+        </li>
+  
+      </ul>
       
-    </ul>
+    </section>
+
+    <section class="btn buttons" >
+      <button>Previous</button>
+      <button>Next</button>
+    </section>
 
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
