fonctional js carousel

--- a/Carousel/index.html
+++ b/Carousel/index.html
@@ -26,37 +26,41 @@
 
   <!-- Add your site or application content here -->
   <h1>Carousel</h1>
-    <section class="carousel">
+  <section>
 
-      <ul>
-  
-        <li>
-          <figure>
-            <img src="img/afficheKroma1.jpg" alt="Concert au Valigloo">
-        </figure>
-  
-        </li>
-        <li>
-          <figure>
-            <img src="img/afficheKroma2.jpg" alt="Concert du 3 juillet">
+    <button class="btn prev_btn" >Previous</button>
+    <ul class="carousel">
+
+      <li>
+        <figure>
+          <img src="img/afficheKroma1.jpg" alt="Concert au Valigloo">
         </figure>
       </li>
-  
-        <li>
-          <figure>
-            <img src="img/photoConcert.jpg" alt="Concert au Fut et à Mesure">
-          </figure>
-        </li>
-  
-      </ul>
-      
-    </section>
 
-    <section class="btn buttons" >
-      <button>Previous</button>
-      <button>Next</button>
-    </section>
+      <li>
+        <figure>
+          <img src="img/afficheKroma2.jpg" alt="Concert du 3 juillet">
+      </figure>
+    </li>
 
+      <li>
+        <figure>
+          <img src="img/photoConcert.jpg" alt="Concert au Fut et à Mesure">
+        </figure>
+      </li>
+
+      <li>
+        <figure>
+          <img src="img/photoconcert2.jpg" alt="Concert au Fut et à Mesure">
+        </figure>
+      </li>
+
+    </ul>
+    <button class="btn next_btn">Next</button>
+    
+  </section>
+
+   
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
