--- a/Liste-courses/index.html
+++ b/Liste-courses/index.html
@@ -25,14 +25,15 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <h1>Liste de courses</h1>
+  <h1>Ma liste de courses</h1>
 
   <section>
 
     <input type="text">
-    <button onclick="addValue()">Ajouter</button>
+    <button>Ajouter</button>
 
   </section>
+  <ul></ul>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
