non fonctional js

--- a/monster-slayer/index.html
+++ b/monster-slayer/index.html
@@ -27,7 +27,7 @@
   <!-- Add your site or application content here -->
 <h1>Score keeper</h1>
   <section>
-    <p class="score"></p>
+    <p class="score">to</p>
     <p class="currentNb">Playing to :</p>
     <input type="number" class="number" min="0" max="10" value="0">
     <button class="player1">Player One</button>
