--- a/monster-slayer/index.html
+++ b/monster-slayer/index.html
@@ -17,7 +17,7 @@
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="assets/css/normalize.css">
-  <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="stylesheet" href="assets/sass/main.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -27,8 +27,8 @@
   <!-- Add your site or application content here -->
 <h1>Score keeper</h1>
   <section>
-    <p class="score">to</p>
-    <p class="currentNb">Playing to :</p>
+    <p class="score"><span class="one"> 0</span> to <span class="two">0</span></p>
+    <p>Playing to :<span class="currentNb"></span></p>
     <input type="number" class="number" min="0" max="10" value="0">
     <button class="player1">Player One</button>
     <button class="player2">Player Two</button>
