--- a/score-keeper/index.html
+++ b/score-keeper/index.html
@@ -16,8 +16,8 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="assets/css/normalize.css">
+  <link rel="stylesheet" href="assets/sass/main.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -25,7 +25,17 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+<h1>Score keeper</h1>
+  <section>
+    <p class="score"><span class="one"> 0</span> to <span class="two">0</span></p>
+    <p>Playing to :<span class="currentNb"></span></p>
+    <input type="number" class="number" min="0" max="10" value="0">
+    <button class="player1">Player One</button>
+    <button class="player2">Player Two</button>
+    <button class="reset">Reset</button>
+  </section>
+  
+
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
