--- a/monster-slayer/index.html
+++ b/monster-slayer/index.html
@@ -27,45 +27,42 @@
   <!-- Add your site or application content here -->
   <h1>Monster Slayer</h1>
   
-  <section>
-    <article>
+  <section class="articles">
 
+    <article class="you">
       <p>YOU</p>
       <span class="pvPlayer"></span> Pv
       <div class="bar">
         <div class="progressPlayer progress"></div>
       </div>
-
     </article>
 
-    <article>
-
+    <article class="monster">
       <p>MONSTER</p>
       <span class="pvMonster"></span> Pv
       <div class="bar">
         <div class="progressMonster progress"></div>
       </div>
-
     </article>
     
   </section>
 
   
-  <section class="sectionStart"></section>
+  <section class="sectionStart">
   
-    <button id="sectionStart_btn">Start game</button>
+    <button id="btn_start">Start game</button>
 
   </section>
 
   <section class="sectionGame">
 
-    <button id="sectionGame_btn__attack">Attack</button>
+    <button id="btn_attack">Attack</button>
 
-    <button id="sectionGame_btn__special">Special Attack</button>
+    <button id="btn_special">Special Attack</button>
 
-    <button id="sectionGame_btn__heal">Heal</button>
+    <button id="btn_heal">Heal</button>
 
-    <button id="sectionGame_btn__giveup">Give Up</button>
+    <button id="btn_giveup">Give Up</button>
 
   </section>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
